Criação compoment resumo-diario

--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -14,11 +14,15 @@
     <li class="navbar-menuitem" [routerLink]="['/']">
       <a>Dashboad</a>
     </li>
+
     <li class="navbar-menuitem" routerLinkActive="ativo" routerLink="/resumo">
       <a>Lançamentos Diários</a>
     </li>
     <li class="navbar-menuitem" routerLinkActive="ativo" routerLink="/cadastro">
       <a>Cadastro Diario</a>
+    </li>
+    <li class="navbar-menuitem" routerLinkActive="ativo" routerLink="/pesquisa">
+      <a>Lista Diária</a>
     </li>
     
     <li class="navbar-menuitem"><a href="javascript:;" (click)="logout()">Logout</a></li>
