--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,7 @@ label {
 }
 
 .col-data {
-  width: 120px;
+  width: 105px;
   text-align: center;
 }
 
@@ -67,4 +67,9 @@ label {
 	left:50%;
 	top:50%;
 	z-index: 1000;
+}
+
+.ui-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
 }
