--- a/src/app/resumo/resumo-diario-pesquisa/resumo-diario-pesquisa.component.css
+++ b/src/app/resumo/resumo-diario-pesquisa/resumo-diario-pesquisa.component.css
@@ -3,7 +3,15 @@
 }
 
 .torta {
+    width: 50px;
+}
+
+.caixa {
     width: 70px;
+}
+
+.oleo {
+    width: 90px;
 }
 
 /* @media screen and (max-width: 720px) {
