--- a/src/app/resumo/resumo-mensal/resumo-mensal.component.html
+++ b/src/app/resumo/resumo-mensal/resumo-mensal.component.html
@@ -1,12 +1,13 @@
 <p-toolbar>
     <div class="ui-toolbar-group-left">
-        <h2>Resumo Diário</h2>
+        <h2>Resumo Mensal</h2>
     </div>
 
     <div class="ui-toolbar-group-right">
         <h4>
-            <p-calendar [showIcon]="true" [locale]="pt" dateFormat="dd/mm/yy" [inputStyle]="{ width: '200px'}" name="dataLancamento"
-                [(ngModel)]="filtro.dataLancamento" (onSelect)="pesquisar()">
+            <p-calendar [showIcon]="true" [locale]="pt" dateFormat="mm/yy" [inputStyle]="{ width: '250px'}" name="dataLancamento"
+             view="month" [yearNavigator]="true" yearRange="2000:2130"
+            [(ngModel)]="filtro.dataLancamento" (onSelect)="pesquisar()">
             </p-calendar>
             <span style="margin-left:35px" pTooltip="Pesquisar"></span>
 
