Mudança de Layoute

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-navbar *ngIf="exibindoNavbar()"></app-navbar>
+<!-- <app-navbar *ngIf="exibindoNavbar()"></app-navbar> -->
 
-<router-outlet></router-outlet>
+<div class="layout-wrapper">
+    <app-topbar></app-topbar>
+    <app-sidebar></app-sidebar>
+
+    <div class="layout-content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
