--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -11,7 +11,7 @@
   <ul class="navbar-menu" [hidden]="!exibindoMenu">
     <li class="navbar-usuario">SOCOCO</li>
     
-    <li class="navbar-menuitem" [routerLink]="['/']">
+    <li class="navbar-menuitem" [routerLink]="['/dashboard']">
       <button pButton type="button" label="Dashboad" tyleClass="menu-lac"></button>
     </li>
 
